# client-library-python

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  _tox.ini  _version.py  arrowhead_system.py  mypy.ini  pyproject.toml  readthedocs.yaml  requirements.txt  service_consumer.py  service_provider.py  setup.cfg  setup.py  tox.ini
.github/workflows/: code_quality.yml  tox.yml
arrowhead-client/: arrowhead_system.py  consumer.py
arrowhead_client/: __init__.py  abc.py  api.py  application.py  arrowhead_system.py  common.py  common_constants.py  configuration.py  constants.py  consumer.py  core_service_forms.py  core_service_responses.py  device.py  dto.py  errors.py  event.py  httpconsumer.py  httpprovider.py  logs.py  mixins.py  provider.py  request.py  response.py  rules.py  security.py  service.py  settings.py  system.py  types.py  utils.py
arrowhead_client/application/: __init__.py  app_core.py  core_service_forms.py
arrowhead_client/client/: __init__.py  client_async.py  client_core.py  client_sync.py  core_service_forms.py  core_service_responses.py  core_services.py  core_system_defaults.py  implementations.py
arrowhead_client/client/core_service_forms/: __init__.py  client.py
arrowhead_client/client/core_services/: __init__.py  orchestrator.py
arrowhead_client/consumer/: __init__.py  base.py
arrowhead_client/consumer/implementations/: aiohttp_consumer.py  requests_consumer.py
arrowhead_client/core_services/: __init__.py  core_service_forms.py  core_service_responses.py  core_services.py  orchestrator.py  service_registry.py
arrowhead_client/implementations/: aiohttp_consumer.py  fastapi_provider.py  httpconsumer.py  httpprovider.py
arrowhead_client/provider/: __init__.py  base.py
arrowhead_client/provider/implementations/: fastapi_provider.py  httpprovider.py
arrowhead_client/security/: access_policy.py  access_token.py  utils.py
arrowhead_client/system/: __init__.py  arrowhead_system.py  consumer.py  provider.py
certificates/: sysop.ca  tls-test.crt  tls-test.key  tls-test.p12
docs/source/: access.rst  api.rst  client.rst  conf.py  contribution.rst  index.rst  internals.rst  quickstart.rst  requirements.txt  security.rst  todo.rst  tut-trouble.rst
docs/source/_static/: arrowhead_custom.css
docs/source/api-reference/: client.rst  constants.rst  consumer.rst  dto.rst  index.rst  provider.rst  rules.rst  service.rst  system.rst  types.rst
docs/source/api-reference/security/: access.rst  index.rst
docs/source/arrowhead-framework/: authorization.rst  event_handler.rst  index.rst  introduction.rst  orchestrator.rst  service-registry.rst
docs/source/user-guide/: client.rst  dto.rst  index.rst  quickstart.rst  security.rst
examples/: consumer_app.py  provider_app.py  test.py  test_consumer.py  time_consumer.py  time_provider.properties  time_provider.py  time_provider_advanced.py
examples/quickstart/: docker-compose.yml  initSQL.sh  quickstart_setup.py
examples/quickstart/certificates/: lib_certs.sh  mk_certs.sh  rm_certs.sh
examples/quickstart/clients/: async_consumer.py  async_provider.py  consumer.py  provider.py
examples/quickstart/core_system_config/: authorization.properties  eventhandler.properties  orchestrator.properties  serviceregistry.properties
examples/quickstart/python/: consumer.py  provider.py
examples/quickstart/sql/: create_empty_arrowhead_db.sql
examples/quickstart_2/: consumer.py  provider.py
source/: arrowhead_system.py  consumer.py  logging.py  provider.py  service.py  service_consumer.py  service_provider.py  tls-test.py  utils.py
src/arrowhead_client/: abc.py  dto.py  errors.py  forms.py  logs.py  request.py  response.py  rules.py  system.py  types.py
src/arrowhead_client/client/: __init__.py  client_async.py  client_core.py  client_sync.py  core_service_responses.py  core_services.py  implementations.py
src/arrowhead_client/consumer/: __init__.py  base.py
src/arrowhead_client/security/: utils.py
tests/: test_abc.py  test_api.py  test_consumed_service.py  test_core_services.py  test_dto.py  test_forms.py  test_implementations.py  test_response.py  test_response_handling.py  test_service.py  test_system.py  test_utils.py
tests/test_core/: test_config_loading.py  test_eventhandling_decorator.py  test_provided_service_decorator.py  test_rules.py
tests/test_security/: conftest.py  test_access_policy.py  test_access_token.py  test_utils.py
tests/unit_tests/: test_abc.py  test_forms.py  test_system.py
tests/unit_tests/test_core/: client.yaml  cloud_config.yaml  test_rules.py
tests/unit_tests/test_security/: test_access_policy.py  test_access_token.py
(+15 files in other folders)
