[metadata]
name = arrowhead-client
version = attr: _version.__version__
author = Jacob Nilsson
author_email = jacob.nilsson@ltu.se
license = EPL-2.0
description = Arrowhead client library
url = https://github.com/arrowhead-f/client-library-python
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)

[options]
packages = find:
python_requires = >=3.7
install_requires =
    FastAPI
    aiohttp[standard]
    uvicorn
    Flask>=1.0.2
    requests>=2.21
    cryptography>=3.3.2
    jwcrypto==0.8
    six
    pyyaml

[options.packages.find]
exclude =
    tests
    tests.*
    examples

[tox:tox]
envlist = py37, py38, py39, docs
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[flake8]
ignore = E501, E126, E127

[testenv]
changedir=tests
passenv=*
deps=
    # Tox reqs
    pytest
    mypy
    flake8
    coverage
    # lib reqs
    FastAPI
    aiohttp[standard]
    uvicorn
    Flask>=1.0.2
    requests>=2.21
    cryptography>=3.3.2
    jwcrypto==0.8
    six
    pyyaml
    # docs reqs
    sphinx==4.0.1
    sphinx_theme
    sphinx_rtd_theme
    sphinx-autodoc-typehints
    sphinx_toolbox
    enum_tools
    sphinxawesome-theme
usedevelop=True
commands=
    coverage run -m pytest
    coverage report
    coverage html
    coverage xml

[testenv:py37]
typing-extensions>=3.7

[testenv:docs]
description = invoke sphinx-build to build the docs
basepython = python3.8
changedir = docs
commands =
    sphinx-build ./source ./build/html
    sphinx-build ./source ./build/latex/ -b latex
    make latexpdf
