[metadata]
name = arrowhead-client
version = 0.5.0a
author = Jacob Nilsson
author_email = jacob.nilsson@ltu.se
license = EPL-2.0
description = Arrowhead client library
url = https://github.com/arrowhead-f/client-library-python
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    jinja2 < 3.1.0
    FastAPI
    aiohttp[standard]
    uvicorn
    Flask>=1.0.2
    requests>=2.21
    cryptography>=3.3.2
    jwcrypto==0.8
    six
    pyyaml
setup_requires =
    setuptools
    build

[options.packages.find]
where=src
exclude =
    tests
    tests.*
    examples


[options.extras_require]
test =
    tox ~= 3.24
    coverage[toml] ~= 6.3
    pytest ~= 6.2
    black ~= 22.1
    flake8 ~= 4.0
    mypy ~= 0.931
docs =
    jinja2 < 3.1.0
    sphinx_theme == 1.0
    sphinxawesome-theme == 1.19
    sphinx_rtd_theme == 1.0
    sphinx-autodoc-typehints == 1.14
    sphinx_toolbox == 3.0
    enum_tools == 0.9
